ingress/httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
spec:
  selector:
    matchLabels:
      app: httpd-a
  replicas: 2
  template:
    metadata:
      labels:
        app: httpd-a
    spec:
      containers:
        - name: httpd
          image: httpd
          ports:
            - containerPort: 80
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
    app: httpd-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
