ingress/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
metadata:
  name: example-ingress
kind: Ingress
spec:
  rules:
    - http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /httpd
            pathType: Prefix
            backend:
              service:
                name: httpd-service
                port:
                  number: 80
